# trustgateai

./: .env.example  .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
apps/backend/: Dockerfile  Procfile  README.md  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260509_0001_initial.py  20260708_0002_add_verdict.py  20260708_0003_add_api_keys.py
apps/backend/app/: __init__.py  celery_app.py  main.py  tasks.py  worker.py
apps/backend/app/agents/: __init__.py  attack_generator.py  evaluator_agent.py  policy_agent.py
apps/backend/app/api/: auth.py  deps.py  evaluations.py  health.py  prompts.py  rag.py  reports.py
apps/backend/app/core/: config.py
apps/backend/app/db/: session.py
apps/backend/app/models/: __init__.py  api_key.py  evaluation.py
apps/backend/app/schemas/: __init__.py  auth.py  evaluation.py  prompt.py  rag.py
apps/backend/app/services/: __init__.py  evaluation_service.py  hallucination_service.py  injection_service.py  pii_service.py  policy_engine.py  rag_faithfulness_service.py  report_service.py  scoring_weights.py  security.py  tool_policy_service.py
apps/backend/tests/: conftest.py  test_agents.py  test_api_auth.py  test_api_evaluations.py  test_api_health.py  test_api_prompts.py  test_api_rag.py  test_api_reports.py  test_config.py  test_hallucination_service.py  test_injection_service.py  test_pii_service.py  test_policy_engine.py  test_rag_faithfulness_service.py  test_report_service.py  test_scoring.py  test_tool_policy_service.py
infra/: docker-compose.yml
ml/: README.md
(+23 files in other folders)
